--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ZDastan/employee-tracker#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "mysql2": "^3.2.0"
   }
